fix: Improve PDF parsing error handling and import
Refactor PDF parsing error handling to provide more specific messages for password-protected PDFs. Also, update the pdf.js import path to use a CDN directly in the `index.html` file, aligning with the `pdfWorkerSrc` configuration.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.28.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "pdfjs-dist": "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.4.168/pdf.min.mjs"
+    "react": "https://aistudiocdn.com/react@^19.2.0"
   }
 }
 </script>
