--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Knowledge Base Chatbot</title>
+    <title>ChatChok: Knowledge Base Chatbot</title>
     <script src="https://cdn.tailwindcss.com"></script>
 <script type="importmap">
 {
